Fix filter toast message state - Fix filter toast message transition issue - Highlight other recommended bikes section when it is 25% visible - Add sass variables to fix gulp file warnings - Remove tab highlight color

--- a/BikeWale.UI/sass/m/make/make.sass
+++ b/BikeWale.UI/sass/m/make/make.sass
@@ -5,6 +5,9 @@
 @import ../../mixins/index
 @import ../../utils/index
 
+html
+	-webkit-tap-highlight-color: transparent
+
 body
 	&.bg-light-grey
 		background: #e3e3e3
@@ -213,13 +216,3 @@ body
 .bodytype-sports
 	@include sports-style-line
 
-.no-filters-selected-toast
-  padding: 20px
-  background-color: #333
-  font-size: 14px
-  color: white
-  bottom: 0
-  position: absolute
-  width: 100%
-  display: none
-  z-index: 25
