--- a/BikeWale.UI/sass/partials/_recommended-bike.sass
+++ b/BikeWale.UI/sass/partials/_recommended-bike.sass
@@ -105,6 +105,7 @@
 
 .overlay--inactive
 	opacity: .3
+	pointer-events: none
 
 @include model-card
 
